--- a/package.json
+++ b/package.json
@@ -1,29 +1,20 @@
 {
-  "name": "server",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "bcryptjs": "^2.4.3",
-    "body-parse": "^0.1.0",
-    "body-parser": "^1.20.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.2",
-    "nodemon": "^2.0.20",
-    "socket.io": "^4.5.4"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.15",
-    "@types/node": "^18.11.18"
+    "fs": "^0.0.1-security",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.0.2",
+    "morgan": "^1.10.0"
   }
 }
